fix：昼夜模式标题栏颜色问题

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -3,7 +3,7 @@
   --vp-c-primary: #61dafb;
   --vp-c-primary-light: #96e6ff;
   --vp-c-primary-dark: #2bb7e6;
-  --vp-c-bg: #0a0a16;
+  /*--vp-c-bg: #ffffff;*/
   --vp-c-bg-alt: #121229;
   --vp-c-text: #e0e0e0;
   --vp-c-text-light: #b0b0b0;
